Added implementation for TDoc and TDocBase; not tested yet

--- a/nifty/Makefile
+++ b/nifty/Makefile
@@ -11,8 +11,8 @@ opt: CXXFLAGS += -O4
 opt: LDFLAGS += -O4
 opt: $(NAME)
 
-$(NAME): $(NAME).cpp Snap.o data_loader.o quote.o
-	g++ -o $(NAME) $(NAME).cpp Snap.o data_loader.o quote.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
+$(NAME): $(NAME).cpp Snap.o data_loader.o quote.o doc.o
+	g++ -o $(NAME) $(NAME).cpp Snap.o data_loader.o quote.o doc.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
 
 Snap.o: 
 	g++ -c $(CXXFLAGS) $(SNAP)/Snap.cpp -I$(GLIB) -I$(SNAP)
@@ -22,6 +22,9 @@ data_loader.o:
 	
 quote.o:
 	g++ -c $(CXXFLAGS) quote.cpp -I$(GLIB) -I$(SNAP)
+	
+doc.o:
+	g++ -c $(CXXFLAGS) doc.cpp -I$(GLIB) -I$(SNAP)
 
 clean:	
 	rm -f *.o *.png *.plt *.tab $(NAME) $(NAME).exe
