Refactored doc.cpp; in the process of testing and debugging doc.cpp

--- a/test_nifty/Makefile
+++ b/test_nifty/Makefile
@@ -7,9 +7,14 @@ GLIB = ../../snap/glib-core
 NIFTY = ../nifty
 
 all: $(NAME)
+
 opt: CXXFLAGS += -O4
 opt: LDFLAGS += -O4
 opt: $(NAME)
+
+debug: CXXFLAGS += -rdynamic -O0 -g -ggdb3 -pg
+debug: LDFLAGS += -rdynamic -O0 -g -ggdb3 -pg
+debug: $(NAME)
 
 $(NAME): $(NAME).cpp Snap.o Nifty_lib.o
 	g++ -o $(NAME) $(NAME).cpp Snap.o Nifty_lib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
@@ -19,4 +24,6 @@ Snap.o:
 
 Nifty_lib.o:
 	g++ -c $(CXXFLAGS) $(NIFTY)/Nifty_lib.cpp -I$(GLIB) -I$(SNAP)
-        
+
+clean:  
+	rm -f *.o *.png *.plt *.tab $(NAME) $(NAME).exe
