Edited test suite Makefile to compile all current tests to executables

--- a/test_nifty/Makefile
+++ b/test_nifty/Makefile
@@ -1,12 +1,11 @@
 CXXFLAGS += -std=c++98 -g -Wall
 LDFLAGS += -lrt
 
-NAME = quote_test
 SNAP = ../../snap/snap-core
 GLIB = ../../snap/glib-core
 NIFTY = ../nifty
 
-all: $(NAME)
+all: doc_test quote_test
 
 opt: CXXFLAGS += -O4
 opt: LDFLAGS += -O4
@@ -14,10 +13,13 @@ opt: $(NAME)
 
 debug: CXXFLAGS += -rdynamic -O0 -g -ggdb3 -pg
 debug: LDFLAGS += -rdynamic -O0 -g -ggdb3 -pg
-debug: $(NAME)
+debug: doc_test quote_test
 
-$(NAME): $(NAME).cpp Snap.o Nifty_lib.o
-	g++ -o $(NAME) $(NAME).cpp Snap.o Nifty_lib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
+doc_test: doc_test.cpp Snap.o Nifty_lib.o
+	g++ -o doc_test doc_test.cpp Snap.o Nifty_lib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
+
+quote_test: quote_test.cpp Snap.o Nifty_lib.o
+	g++ -o quote_test quote_test.cpp Snap.o Nifty_lib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
 
 Snap.o:
 	g++ -c $(CXXFLAGS) $(SNAP)/Snap.cpp -I$(GLIB) -I$(SNAP)
