--- a/test_nifty/Makefile
+++ b/test_nifty/Makefile
@@ -5,7 +5,7 @@ SNAP = ../../snap/snap-core
 GLIB = ../../snap/glib-core
 NIFTY = ../nifty
 
-all: doc_test lsh_test quote_test
+all: doctest lshtest quotetest
 
 opt: CXXFLAGS += -O4
 opt: LDFLAGS += -O4
@@ -13,22 +13,22 @@ opt: $(NAME)
 
 debug: CXXFLAGS += -rdynamic -O0 -g -ggdb3 -pg
 debug: LDFLAGS += -rdynamic -O0 -g -ggdb3 -pg
-debug: doc_test lsh_test quote_test
+debug: doctest lshtest quotetest
 
-doc_test: doc_test.cpp Snap.o Nifty_lib.o
-	g++ -o doc_test doc_test.cpp Snap.o Nifty_lib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
+doctest: doctest.cpp Snap.o niftylib.o
+	g++ -o doctest doctest.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
 
-lsh_test: lsh_test.cpp Snap.o Nifty_lib.o
-	g++ -o lsh_test lsh_test.cpp Snap.o Nifty_lib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
+lshtest: lshtest.cpp Snap.o niftylib.o
+	g++ -o lshtest lshtest.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
 
-quote_test: quote_test.cpp Snap.o Nifty_lib.o
-	g++ -o quote_test quote_test.cpp Snap.o Nifty_lib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
+quotetest: quotetest.cpp Snap.o niftylib.o
+	g++ -o quotetest quotetest.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
 
 Snap.o:
 	g++ -c $(CXXFLAGS) $(SNAP)/Snap.cpp -I$(GLIB) -I$(SNAP)
 
-Nifty_lib.o:
-	g++ -c $(CXXFLAGS) $(NIFTY)/Nifty_lib.cpp -I$(GLIB) -I$(SNAP)
+niftylib.o:
+	g++ -c $(CXXFLAGS) $(NIFTY)/niftylib.cpp -I$(GLIB) -I$(SNAP)
 
 clean:  
 	rm -f *.o *.png *.plt *.tab $(NAME) $(NAME).exe
