this should take in Sandy's peak function into account for edge deletion now. Added some more code to let logging of output run, even though right now it saves nothing, haha.

--- a/nifty/Makefile
+++ b/nifty/Makefile
@@ -41,6 +41,9 @@ clustering.o:
 	
 clusterplot.o:
 	g++ -c $(CXXFLAGS) clusterplot.cpp -I$(GLIB) -I$(SNAP)
+	
+logoutput.o:
+	g++ -c $(CXXFLAGS) logoutput.cpp -I$(GLIB) -I$(SNAP)
 
 clean:	
 	rm -f *.o *.png *.plt *.tab $(NAME) $(NAME).exe
