--- a/nifty/Makefile
+++ b/nifty/Makefile
@@ -12,11 +12,11 @@ profile: CXXFLAGS += -pg
 profile: LDFLAGS += -pg
 profile: filter memecluster
 
-filter: filter.cpp Snap.o dataloader.o doc.o quote.o lsh.o quotegraph.o clustering.o clusterplot.o logoutput.o
-	g++ -o filter filter.cpp Snap.o dataloader.o doc.o quote.o lsh.o quotegraph.o clustering.o clusterplot.o logoutput.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
+filter: filter.cpp Snap.o dataloader.o doc.o quote.o 
+	g++ -o filter filter.cpp Snap.o dataloader.o doc.o quote.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
 	
-memecluster: memecluster.cpp Snap.o dataloader.o doc.o quote.o lsh.o quotegraph.o clustering.o clusterplot.o logoutput.o
-	g++ -o memecluster memecluster.cpp Snap.o dataloader.o doc.o quote.o lsh.o quotegraph.o clustering.o clusterplot.o logoutput.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
+memecluster: memecluster.cpp Snap.o doc.o quote.o lsh.o quotegraph.o clustering.o clusterplot.o logoutput.o cluster.o
+	g++ -o memecluster memecluster.cpp Snap.o doc.o quote.o lsh.o quotegraph.o clustering.o clusterplot.o logoutput.o cluster.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
 
 Snap.o: 
 	g++ -c $(CXXFLAGS) $(SNAP)/Snap.cpp -I$(GLIB) -I$(SNAP)
@@ -36,6 +36,9 @@ lsh.o:
 quotegraph.o:
 	g++ -c $(CXXFLAGS) quotegraph.cpp -I$(GLIB) -I$(SNAP)
 	
+cluster.o:
+	g++ -c $(CXXFLAGS) cluster.cpp -I$(GLIB) -I$(SNAP)
+
 clustering.o:
 	g++ -c $(CXXFLAGS) clustering.cpp -I$(GLIB) -I$(SNAP)
 	
