Include directory structure

--- a/nifty/Makefile
+++ b/nifty/Makefile
@@ -3,6 +3,7 @@ LDFLAGS += -lrt
 
 SNAP = ../../snap/snap-core
 GLIB = ../../snap/glib-core
+NLIB = lib
 
 all: filter memecluster
 opt: CXXFLAGS += -O3
@@ -12,41 +13,17 @@ profile: CXXFLAGS += -pg
 profile: LDFLAGS += -pg
 profile: filter memecluster
 
-filter: filter.cpp Snap.o dataloader.o doc.o quote.o 
-	g++ -o filter filter.cpp Snap.o dataloader.o doc.o quote.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
+filter: filter.cpp Snap.o niftylib.o
+	g++ -o filter filter.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
 	
-memecluster: memecluster.cpp Snap.o doc.o quote.o lsh.o quotegraph.o clustering.o clusterplot.o logoutput.o cluster.o
-	g++ -o memecluster memecluster.cpp Snap.o doc.o quote.o lsh.o quotegraph.o clustering.o clusterplot.o logoutput.o cluster.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
+memecluster: memecluster.cpp Snap.o niftylib.o
+	g++ -o memecluster memecluster.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
 
 Snap.o: 
 	g++ -c $(CXXFLAGS) $(SNAP)/Snap.cpp -I$(GLIB) -I$(SNAP)
 	
-dataloader.o:
-	g++ -c $(CXXFLAGS) dataloader.cpp -I$(GLIB) -I$(SNAP)
-	
-doc.o:
-	g++ -c $(CXXFLAGS) doc.cpp -I$(GLIB) -I$(SNAP)
-	
-quote.o:
-	g++ -c $(CXXFLAGS) quote.cpp -I$(GLIB) -I$(SNAP)
-
-lsh.o:
-	g++ -c $(CXXFLAGS) lsh.cpp -I$(GLIB) -I$(SNAP)
-
-quotegraph.o:
-	g++ -c $(CXXFLAGS) quotegraph.cpp -I$(GLIB) -I$(SNAP)
-	
-cluster.o:
-	g++ -c $(CXXFLAGS) cluster.cpp -I$(GLIB) -I$(SNAP)
-
-clustering.o:
-	g++ -c $(CXXFLAGS) clustering.cpp -I$(GLIB) -I$(SNAP)
-	
-clusterplot.o:
-	g++ -c $(CXXFLAGS) clusterplot.cpp -I$(GLIB) -I$(SNAP)
-	
-logoutput.o:
-	g++ -c $(CXXFLAGS) logoutput.cpp -I$(GLIB) -I$(SNAP)
+niftylib.o:
+	g++ -c $(CXXFLAGS) $(NLIB)/niftylib.cpp -I$(GLIB) -I$(SNAP)
 
 clean:	
 	rm -f *.o *.png *.plt *.tab $(NAME) $(NAME).exe
