--- a/test_nifty/Makefile
+++ b/test_nifty/Makefile
@@ -3,9 +3,9 @@ LDFLAGS += -lrt
 
 SNAP = ../../snap/snap-core
 GLIB = ../../snap/glib-core
-NIFTY = ../nifty
+NIFTY = ../nifty/lib
 
-all: clusteringtest doctest lshtest quotetest
+all: clusteringtest doctest lshtest quotetest clustertest
 
 opt: CXXFLAGS += -O4
 opt: LDFLAGS += -O4
@@ -13,7 +13,7 @@ opt: $(NAME)
 
 debug: CXXFLAGS += -rdynamic -O0 -g -ggdb3 -pg
 debug: LDFLAGS += -rdynamic -O0 -g -ggdb3 -pg
-debug: doctest lshtest quotetest
+debug: doctest lshtest quotetest clustertest
 
 clusteringtest: clusteringtest.cpp Snap.o niftylib.o
 	g++ -o clusteringtest clusteringtest.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
@@ -26,6 +26,9 @@ lshtest: lshtest.cpp Snap.o niftylib.o
 
 quotetest: quotetest.cpp Snap.o niftylib.o
 	g++ -o quotetest quotetest.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
+
+clustertest: clustertest.cpp Snap.o niftylib.o
+	g++ -o clustertest clustertest.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
 
 Snap.o:
 	g++ -c $(CXXFLAGS) $(SNAP)/Snap.cpp -I$(GLIB) -I$(SNAP)
