--- a/nifty/Makefile
+++ b/nifty/Makefile
@@ -5,13 +5,13 @@ SNAP = ../../snap/snap-core
 GLIB = ../../snap/glib-core
 NLIB = lib
 
-all: memefilter memecluster memepostcluster memeincrement memeincrementalcluster
+all: memefilter memecluster memepostcluster memeincrement memeincrementalcluster memepostincrementalcluster
 opt: CXXFLAGS += -O3
 opt: LDFLAGS += -O3
-opt: memefilter memecluster memepostcluster memeincrement memeincrementalcluster
+opt: memefilter memecluster memepostcluster memeincrement memeincrementalcluster memepostincrementalcluster
 profile: CXXFLAGS += -pg
 profile: LDFLAGS += -pg
-profile: memefilter memecluster memepostcluster memeincrement memeincrementalcluster
+profile: memefilter memecluster memepostcluster memeincrement memeincrementalcluster memepostincrementalcluster
 
 memefilter: memefilter.cpp Snap.o niftylib.o
 	g++ -o memefilter memefilter.cpp Snap.o niftylib.o -fopenmp -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
@@ -24,7 +24,10 @@ memeincrementalcluster: memeincrementalcluster.cpp Snap.o niftylib.o
 
 memepostcluster: memepostcluster.cpp Snap.o niftylib.o
 	g++ -o memepostcluster memepostcluster.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
-	
+
+memepostincrementalcluster: memepostincrementalcluster.cpp Snap.o niftylib.o
+	g++ -o memepostincrementalcluster memepostincrementalcluster.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
+
 memeincrement: memeincrement.cpp Snap.o niftylib.o
 	g++ -o memeincrement memeincrement.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
 
