--- a/nifty/Makefile
+++ b/nifty/Makefile
@@ -5,22 +5,19 @@ SNAP = ../../snap/snap-core
 GLIB = ../../snap/glib-core
 NLIB = lib
 
-all: memefilter memecluster memepostcluster memeincrement memeincrementalcluster memeseed
+all: memefilter memecluster memepostcluster memeincrement memeseed
 opt: CXXFLAGS += -O3
 opt: LDFLAGS += -O3
-opt: memefilter memecluster memepostcluster memeincrement memeincrementalcluster memeseed
+opt: memefilter memecluster memepostcluster memeincrement memeseed
 profile: CXXFLAGS += -pg
 profile: LDFLAGS += -pg
-profile: memefilter memecluster memepostcluster memeincrement memeincrementalcluster memeseed
+profile: memefilter memecluster memepostcluster memeincrement memeseed
 
 memefilter: memefilter.cpp Snap.o niftylib.o
 	g++ -o memefilter memefilter.cpp Snap.o niftylib.o -fopenmp -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
 	
 memecluster: memecluster.cpp Snap.o niftylib.o
 	g++ -o memecluster memecluster.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
-
-memeincrementalcluster: memeincrementalcluster.cpp Snap.o niftylib.o
-	g++ -o memeincrementalcluster memeincrementalcluster.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
 
 memepostcluster: memepostcluster.cpp Snap.o niftylib.o
 	g++ -o memepostcluster memepostcluster.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
