so apparently everything didn't fit together like a jigsaw puzzle...included in this commit are lots of bug fixed/tweaks to get printclusterjson working nicely with memeincrement. :) also changed the way it works so it is more generous about finding the 3-month and 1-month window (so it'll actually print *something*). we are so closeeeels :D

--- a/nifty/Makefile
+++ b/nifty/Makefile
@@ -5,13 +5,13 @@ SNAP = ../../snap/snap-core
 GLIB = ../../snap/glib-core
 NLIB = lib
 
-all: memefilter memecluster memepostcluster memeincrement memeseed memecombine
+all: memefilter memecluster memepostcluster memeincrement memeseed memecombine memelog
 opt: CXXFLAGS += -O3
 opt: LDFLAGS += -O3
-opt: memefilter memecluster memepostcluster memeincrement memeseed memecombine
+opt: memefilter memecluster memepostcluster memeincrement memeseed memecombine memelog
 profile: CXXFLAGS += -pg
 profile: LDFLAGS += -pg
-profile: memefilter memecluster memepostcluster memeincrement memeseed memecombine
+profile: memefilter memecluster memepostcluster memeincrement memeseed memecombine memelog
 
 memefilter: memefilter.cpp Snap.o niftylib.o
 	g++ -o memefilter memefilter.cpp Snap.o niftylib.o -fopenmp -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
@@ -27,6 +27,9 @@ memeseed: memeseed.cpp Snap.o niftylib.o
 	
 memecombine: memecombine.cpp Snap.o niftylib.o
 	g++ -o memecombine memecombine.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
+	
+memelog: memelog.cpp Snap.o niftylib.o
+	g++ -o memelog memelog.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
 
 Snap.o: 
 	g++ -c $(CXXFLAGS) $(SNAP)/Snap.cpp -I$(GLIB) -I$(SNAP)
