--- a/nifty/Makefile
+++ b/nifty/Makefile
@@ -12,6 +12,8 @@ opt: memefilter memecluster memepostcluster memeincrement memeseed memecombine m
 profile: CXXFLAGS += -pg
 profile: LDFLAGS += -pg
 profile: memefilter memecluster memepostcluster memeincrement memeseed memecombine memelog
+log: LOG += -g -rdynamic
+log: memefilter memecluster memepostcluster memeincrement memeseed memecombine memelog
 
 memefilter: memefilter.cpp Snap.o niftylib.o
 	g++ -o memefilter memefilter.cpp Snap.o niftylib.o -fopenmp -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
@@ -23,7 +25,7 @@ memeincrement: memeincrement.cpp Snap.o niftylib.o
 	g++ -o memeincrement memeincrement.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
 	
 memeseed: memeseed.cpp Snap.o niftylib.o
-	g++ -o memeseed memeseed.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
+	g++ -o memeseed memeseed.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) $(LOG)
 	
 memecombine: memecombine.cpp Snap.o niftylib.o
 	g++ -o memecombine memecombine.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
@@ -35,7 +37,7 @@ Snap.o:
 	g++ -c $(CXXFLAGS) $(SNAP)/Snap.cpp -I$(GLIB) -I$(SNAP)
 	
 niftylib.o:
-	g++ -c $(CXXFLAGS) $(NLIB)/niftylib.cpp -I$(GLIB) -I$(SNAP)
+	g++ -c $(CXXFLAGS) $(NLIB)/niftylib.cpp -I$(GLIB) -I$(SNAP) $(LOG)
 
 clean:	
 	rm -f *.o *.png *.plt *.tab $(NAME) $(NAME).exe
