--- a/nifty/Makefile
+++ b/nifty/Makefile
@@ -5,30 +5,24 @@ SNAP = ../../snap/snap-core
 GLIB = ../../snap/glib-core
 NLIB = lib
 
-all: memefilter memecluster memepostcluster memeincrement memeseed memecombine memelog
+all: memefilter memecluster memeincrement memeseed memelog
 opt: CXXFLAGS += -O3
 opt: LDFLAGS += -O3
-opt: memefilter memecluster memepostcluster memeincrement memeseed memecombine memelog
+opt: memefilter memecluster memeincrement memeseed memelog
 profile: CXXFLAGS += -pg
 profile: LDFLAGS += -pg
-profile: memefilter memecluster memepostcluster memeincrement memeseed memecombine memelog
+profile: memefilter memecluster memeincrement memeseed memelog
 log: LOG += -g -rdynamic
-log: memefilter memecluster memepostcluster memeincrement memeseed memecombine memelog
+log: memefilter memecluster memeincrement memeseed memelog
 
 memefilter: memefilter.cpp Snap.o niftylib.o
 	g++ -o memefilter memefilter.cpp Snap.o niftylib.o -fopenmp -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
-	
-memepostcluster: memepostcluster.cpp Snap.o niftylib.o
-	g++ -o memepostcluster memepostcluster.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
 
 memeincrement: memeincrement.cpp Snap.o niftylib.o
 	g++ -o memeincrement memeincrement.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
 	
 memeseed: memeseed.cpp Snap.o niftylib.o
 	g++ -o memeseed memeseed.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) $(LOG)
-	
-memecombine: memecombine.cpp Snap.o niftylib.o
-	g++ -o memecombine memecombine.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
 	
 memelog: memelog.cpp Snap.o niftylib.o
 	g++ -o memelog memelog.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS)
