--- a/nifty/Makefile
+++ b/nifty/Makefile
@@ -5,15 +5,15 @@ SNAP = ../../snap/snap-core
 GLIB = ../../snap/glib-core
 NLIB = lib
 
-all: memefilter memecluster memeincrement memeseed memelog
+all: memefilter memeincrement memeseed memelog
 opt: CXXFLAGS += -O3
 opt: LDFLAGS += -O3
-opt: memefilter memecluster memeincrement memeseed memelog
+opt: memefilter memeincrement memeseed memelog
 profile: CXXFLAGS += -pg
 profile: LDFLAGS += -pg
-profile: memefilter memecluster memeincrement memeseed memelog
+profile: memefilter memeincrement memeseed memelog
 log: LOG += -g -rdynamic
-log: memefilter memecluster memeincrement memeseed memelog
+log: memefilter memeincrement memeseed memelog
 
 memefilter: memefilter.cpp Snap.o niftylib.o
 	g++ -o memefilter memefilter.cpp Snap.o niftylib.o -fopenmp -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
