Add code to convert nifty QB to normal binary file. Add code to memetracker to convert the binary file to QuoteBs. Modify memetracker so that it works

--- a/memetracker/Makefile
+++ b/memetracker/Makefile
@@ -12,26 +12,30 @@ LDFLAGS += -lrt
 #CXXFLAGS += -Wall
 #LDFLAGS += 
 
-GG = ../../../SnapLib
+SNAP = ../../snap/snap-core
+GLIB = ../../snap/glib-core
 
-all: MemeWorks
+all: MemeWorks niftytoqtbs
 
 opt: CXXFLAGS += -O4
 opt: LDFLAGS += -O4
-opt: MemeWorks
+opt: MemeWorks niftytoqtbs
 
 # COMPILE
+memes.o: memes.cpp memes.h
+	g++ -c $(CXXFLAGS) memes.cpp -I$(GLIB) -I$(SNAP) $(CXXFLAGS) 
+	
+niftytoqtbs: niftytoqtbs.cpp Snap.o memes.o spinn3r.o
+	g++ $(LDFLAGS) -o niftytoqtbs niftytoqtbs.cpp memes.o spinn3r.o Snap.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
+	
 MemeWorks: MemeWorks.cpp Snap.o memes.o spinn3r.o
-	g++ $(LDFLAGS) -o MemeWorks MemeWorks.cpp memes.o spinn3r.o Snap.o -I../../../GLib -I$(GG)
+	g++ $(LDFLAGS) -o MemeWorks MemeWorks.cpp memes.o spinn3r.o Snap.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
 
-memes.o: $(GG)/memes.cpp $(GG)/memes.h
-	g++ -c $(CXXFLAGS) $(GG)/memes.cpp -I../../../GLib -I$(GG)
-
-spinn3r.o: $(GG)/spinn3r.cpp $(GG)/spinn3r.h
-	g++ -c $(CXXFLAGS) $(GG)/spinn3r.cpp -I../../../GLib -I$(GG)
+spinn3r.o: spinn3r.cpp spinn3r.h
+	g++ -c $(CXXFLAGS) spinn3r.cpp -I$(GLIB) -I$(SNAP) $(CXXFLAGS) 
 	
 Snap.o: 
-	g++ -c $(CXXFLAGS) $(GG)/Snap.cpp -I../../../GLib -I$(GG)
+	g++ -c $(CXXFLAGS) $(SNAP)/Snap.cpp -I$(GLIB) -I$(SNAP) $(CXXFLAGS) 
 
 clean:
 	rm -f *.o  MemeWorks  MemeWorks.exe
