--- a/nifty/Makefile
+++ b/nifty/Makefile
@@ -5,15 +5,18 @@ SNAP = ../../snap/snap-core
 GLIB = ../../snap/glib-core
 NLIB = lib
 
-all: memefilter memeincrement memeseed memelog
+all: memefilter memeincrement memeseed memelog memedumpquote
 opt: CXXFLAGS += -O3
 opt: LDFLAGS += -O3
-opt: memefilter memeincrement memeseed memelog
+opt: memefilter memeincrement memeseed memelog memedumpquote
 profile: CXXFLAGS += -pg
 profile: LDFLAGS += -pg
-profile: memefilter memeincrement memeseed memelog
+profile: memefilter memeincrement memeseed memelog memedumpquote
 log: LOG += -g -rdynamic
-log: memefilter memeincrement memeseed memelog
+log: memefilter memeincrement memeseed memelog memedumpquote
+
+memedumpquote: memedumpquote.cpp Snap.o niftylib.o
+	g++ -o memedumpquote memedumpquote.cpp Snap.o niftylib.o -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
 
 memefilter: memefilter.cpp Snap.o niftylib.o
 	g++ -o memefilter memefilter.cpp Snap.o niftylib.o -fopenmp -I$(GLIB) -I$(SNAP) $(LDFLAGS) 
